# llm-and-me

./: .gitignore  ERD.md  Instructions.md  PRD.md  README.md  package-lock.json  pyproject.toml  start-mcp-servers.sh
conventions/: coding.md  commit.md
src/: main.py
src/llm_and_me/: __init__.py
tasks/: create_tool_to_pick_correct_newrelic_api_key.md  switching_agent.md
templates/: README.md  release-notes.yaml  shell-command.yaml
tools/: md_splitter.py
