[project]
name = "llm-and-me"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "logfire>=3.12.0",
    "mcp-server-fetch>=2025.1.17",
    "pydantic-ai>=0.0.52",
    "pylint>=3.3.6",
    "tool>=0.8.0",
]

[tool.uv.sources] 
dev-tools = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
