[project]
name = "llm-and-me"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "llm-and-me-agents",
    "dotenv>=0.9.9",
    "logfire>=3.12.0",
    "pylint>=3.3.6", # Usually a dev dependency, but keeping as per original
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0"
]

[tool.uv.sources]
llm-and-me-agents = { workspace = true }


[project.scripts]
llm-and-me = "llm_and_me:run_agent"
processing-history-mcp-server = "llm_and_me_tools.processing_history_mcp_server:main"

[tool.uv.workspace]
members = [
    "packages/*",
]

